CONFIGURE_FILE(
  ${PROJECT_SOURCE_DIR}/doc/Doxyfile.in
  ${PROJECT_BINARY_DIR}/doc/Doxyfile
  @ONLY)

CONFIGURE_FILE(
  ${PROJECT_SOURCE_DIR}/doc/DoxygenLayout.xml
  ${PROJECT_BINARY_DIR}/doc/DoxygenLayout.xml
  COPYONLY)


IF(DOXYGEN_EXECUTABLE)
  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html/)
  IF(UNIX)
    ADD_CUSTOM_TARGET(doc ALL
      COMMAND rm -rf html
      COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
  ELSEIF(WIN32)
    ADD_CUSTOM_TARGET(doc ALL
      COMMAND if exist html rmdir /s /q html
      COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
  ENDIF(UNIX)
  #INSTALL(
  #  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html/
  #  DESTINATION ${INSTALL_DOC_DIR}
  #  COMPONENT html_documentation)
ENDIF(DOXYGEN_EXECUTABLE)

